# binance-history

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  LICENSE-MIT  README.md
examples/: basic.rs  custom.rs
src/: csv.rs  download.rs  error.rs  lib.rs  models.rs  tests.rs  util.rs
src/model/: config.rs  data.rs  data_history.rs  data_history_del.rs  data_type.rs  deserialize.rs  file_data.rs  interval.rs  market_type.rs  mod.rs
src/model/market_type/: common.rs  klines.rs  mod.rs  trades.rs
src/util/: date_range.rs  deserialize.rs  mod.rs
