[package]
authors = ["K0nstantini <k0nstamtinus@gmail.com>"]
categories = ["api-bindings", "cryptography::cryptocurrencies"]
description = "Downloading and parsing historical data from the Binance exchange"
keywords = ["exchange", "trading", "historical-data", "cryptocurrency", "binance"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/K0nstantini/binance-history"
readme = "README.md"
name = "binance-history"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.23"
csv = "1.2.1"
rust_decimal = "1.28.1"
reqwest = "0.11.14"
serde = { version = "1.0.152", features = ["derive"] }
serde_with = { version = "2.2.0", features = ["chrono"] }
thiserror = "1.0.39"
tokio = { version = "1.26.0", features = ["full"] }
zip = "0.6.4"