[package]
authors = ["K0nstantini <k0nstamtinus@gmail.com>"]
categories = ["api-bindings", "cryptography::cryptocurrencies"]
description = "Downloading and parsing historical data from the Binance exchange"
keywords = ["exchange", "trading", "historical-data", "cryptocurrency", "binance"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/K0nstantini/binance-history"
readme = "README.md"
name = "binance-history"
version = "0.2.0"
edition = "2021"

[dependencies]
chrono = "0.4.39"
csv = "1.3.1"
rust_decimal = "1.36.0"
reqwest = { version = "0.12.9", features = ["blocking", "json"] }
serde = { version = "1.0.216", features = ["derive"] }
serde_with = { version = "3.11.0", features = ["chrono"] }
thiserror = "2.0.8"
url = "2.5.4"
zip = "2.2.2"